deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: handpi-games
  labels:
    name: handpi-games
