deploy/router-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: router
  namespace: handpi-games
spec:
  replicas: 2
  selector:
    matchLabels:
      app: router
  template:
    metadata:
      labels:
        app: router
    spec:
      containers:
        - name: router
          image: ghcr.io/amirofcodes/handpi-router:20260308-9580a5e
          ports:
            - containerPort: 80
            - containerPort: 443
          securityContext:
            runAsUser: 101
            runAsGroup: 101
            allowPrivilegeEscalation: false
            runAsNonRoot: true
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
            - name: nginx-cache
              mountPath: /var/cache/nginx
            - name: nginx-run
              mountPath: /var/run
            - name: tls-certs
              mountPath: /etc/ssl/certs
              readOnly: true
            - name: tls-private
              mountPath: /etc/ssl/private
              readOnly: true
          imagePullPolicy: Always
      volumes:
        - name: nginx-config
          configMap:
            name: router-config
        - name: nginx-cache
          emptyDir: {}
        - name: nginx-run
          emptyDir: {}
        - name: tls-certs
          secret:
            secretName: handpi-tls
            items:
              - key: tls.crt
                path: tls.crt
        - name: tls-private
          secret:
            secretName: handpi-tls
            items:
              - key: tls.key
                path: tls.key
