deploy/v4l2-device-plugin.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: v4l2-device-plugin
  namespace: kube-system
  labels:
    app.kubernetes.io/name: v4l2-device-plugin
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: v4l2-device-plugin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: v4l2-device-plugin
    spec:
      priorityClassName: system-node-critical
      tolerations:
        - operator: "Exists"
      containers:
        - name: device-plugin
          image: ghcr.io/squat/generic-device-plugin:v0.2.3
          securityContext:
            privileged: true
          args:
            - --device
            - |
              {
                "name": "video",
                "groups": [
                  { "paths": [ { "path": "/dev/video0" } ] }
                ]
              }
          resources:
            requests:
              cpu: 25m
              memory: 32Mi
            limits:
              cpu: 25m
              memory: 32Mi
          volumeMounts:
            - name: kubelet-sock
              mountPath: /var/lib/kubelet/device-plugins
      volumes:
        - name: kubelet-sock
          hostPath:
            path: /var/lib/kubelet/device-plugins
            type: Directory
