deploy/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: handpi-games
spec:
  selector:
    app: backend
  ports:
    - port: 5001
      targetPort: 5001
