deploy/frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: handpi-games
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
