deploy/router-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: router
  namespace: handpi-games
spec:
  selector:
    app: router
  ports:
    - port: 80
      targetPort: 80
